# SchemeAPI

./: README.md  main.py  pyproject.toml
src/SchemeAPI/: __init__.py  backoff.py  model.py  ratelimit.py
src/scheme-api/: client.py
src/scheme_api/: client.py
