[project]
name = "scheme_api"
version = "0.1.1"
description = "A lightweight, typed HTTP API client built on top of `requests` with optional request decorators and Pydantic-based response validation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "requests>=2.34.0",
]
